# a22abb2

./: .gitignore  Calculator.sln  Cargo.toml  LICENSE.txt  README.md  Reluclac.sln  Xargo.toml  rust-toolchain  test-calculations.txt
Reluclac/: A22abb2.cs  App.xaml  App.xaml.cs  CalculationViewModel.cs  MainPage.xaml  MainPage.xaml.cs  Package.appxmanifest  Reluclac.csproj
Reluclac/Properties/: AssemblyInfo.cs
a22abb2/: A22abb2.sln
a22abb2-core/: Cargo.toml
a22abb2-core/src/: lib.rs  node.rs  parser.rs  ratio2flt.rs  result.rs
a22abb2-core/src/lexer/: mod.rs  token.rs
a22abb2-core/src/node/: display.rs  eval.rs  mod.rs  simplify.rs  util.rs
a22abb2-ffi/: Cargo.toml
a22abb2-ffi/src/: lib.rs
a22abb2/A22abb2/: A22abb2.cs  A22abb2.csproj  App.xaml  App.xaml.cs  CalculationViewModel.cs  Ffi.cs  MainPage.xaml  MainPage.xaml.cs  Package.appxmanifest  PropertySheet.props
a22abb2/A22abb2/Properties/: AssemblyInfo.cs
a22abb2/A22abb2/Strings/en-US/: Resources.resw
a22abb2/A22abb2/Strings/es-ES/: Resources.resw
a22abb2/A22abb2/Strings/fr-FR/: Resources.resw
costau/: CosTau.sln
costau-core/: Cargo.toml
costau-core/src/: lib.rs  parser.rs
costau-core/src/lexer/: mod.rs
costau-core/src/node/: display.rs  eval.rs  mod.rs  simplify.rs  util.rs
costau-ffi/: Cargo.toml
costau-ffi/src/: lib.rs
costau/CosTau/: App.xaml  App.xaml.cs  CalculationViewModel.cs  CosTau.csproj  Ffi.cs  MainPage.xaml  MainPage.xaml.cs  Package.appxmanifest
costau/CosTau/Properties/: AssemblyInfo.cs
costau/CosTau/Strings/en-US/: Resources.resw
costau/CosTau/Strings/es-ES/: Resources.resw
costau/CosTau/Strings/fr-FR/: Resources.resw
impl/: Cargo.toml
impl/src/: lib.rs  main.rs.old  node.rs  ratio2flt.rs  result.rs
impl/src/lexer/: mod.rs
uwp/: App.cpp  App.h  App.xaml  Calculator.UWP.vcxproj  Calculator.UWP.vcxproj.filters  Calculator.UWP_TemporaryKey.pfx  MainPage.cpp  MainPage.h  MainPage.xaml  Package.appxmanifest  ffi.cpp  ffi.h  pch.h  readme.txt
