[package]
name = "a22abb2-ffi"
version = "0.1.0"
authors = ["Greg Depoire--Ferrer <greg.depoire@gmail.com>"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
a22abb2-core = { path = "../a22abb2-core" }

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3.8"
features = ["combaseapi"]
