[package]
name = "costau-core"
version = "0.4.0"
authors = ["Greg Depoire--Ferrer <greg.depoire@gmail.com>"]
description = "A calculator library"
keywords = ["number", "calculator"]
license = "MIT"
publish = false
default-run = "eval"

[dependencies]
either = "1.5.3"
float-cmp = "0.8.0"
num-bigint = "0.2.6"
num-integer = "0.1.42"
num-rational = "0.2.4"
num-traits = "0.2.11"
rand = "0.7.3"
ryu = "1.0.4"
