[package]
name = "costau-ffi"
version = "0.1.0"
authors = ["Greg Depoire--Ferrer <greg.depoire@gmail.com>"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
costau-core = { path = "../costau-core" }
num-traits = "0.2.11"

[target.'cfg(windows)'.dependencies.winapi]
# The latest released version (0.3.8) does not build successfully for ARM64,
# but `master` does.
git = "https://github.com/retep998/winapi-rs.git"
rev = "8c3190fb0bbf5a5e37c15b8f892d6ea8b9152cb6"
features = ["combaseapi"]
default-features = false
